--- a/index.html
+++ b/index.html
@@ -527,6 +527,81 @@
       </div>
     </section>
     <!-- text banner ends -->
+
+    <!-- News letter starts -->
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newsText">
+        <h4>Sign up for Newsletter</h4>
+        <p>
+          Ge E-mail updates about our latest shop and
+          <span>Special Offer !!</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="email" placeholder="E-mail Address" name="" id="" />
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
+    <!-- News letter ends -->
+
+    <!-- Footer starts -->
+    <section id="footer" class="section-p1">
+      <div class="col">
+        <img class="logo" src="./img/logo.png" alt="" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Address : </strong> 562 Wellington Road, Street 32, San
+          Francisco.
+        </p>
+        <p><strong>Phone : </strong> +880 1765871554</p>
+
+        <p><strong>Hours : </strong> 10:00 - 18:00. Mon - Sat</p>
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icons">
+            <a href=""><i class="fab fa-facebook-square"></i></a>
+            <a href=""><i class="fab fa-instagram-square"></i></a>
+            <a href=""><i class="fab fa-twitter-square"></i></a>
+            <a href=""><i class="fab fa-youtube-square"></i></a>
+            <a href=""><i class="fab fa-pinterest-square"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="">About Us</a>
+        <a href="">Delivery Information</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Terms & Condition</a>
+        <a href="">Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="">Sign In</a>
+        <a href="">View Cart</a>
+        <a href="">My Wishlist</a>
+        <a href="">Track My Order</a>
+        <a href="">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install Our App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="./img/pay/app.jpg" alt="" />
+          <img src="./img/pay/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateway</p>
+        <img src="./img/pay/pay.png" alt="" />
+      </div>
+
+      <div class="copyright">
+        <p>&copy; 2022, Reserved By - MUHAMMAD SIAM</p>
+      </div>
+    </section>
+    <!-- Footer ends -->
     <script src="./main.js"></script>
   </body>
 </html>
