--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
           </li>
+          <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
       </div>
     </section>
     <!-- HEader ends -->
@@ -602,6 +607,6 @@
       </div>
     </section>
     <!-- Footer ends -->
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
